Implemented Kleene logic